Modify DB setting and Add brand menu

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -12,6 +12,12 @@
                     <i class="fa fa-th-list"></i><span>商品管理</span><i class="fa fa-angle-down pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
+                    <li><a href="#"><i class="fa fa-align-justify"></i>品牌管理<i class="fa fa-angle-down pull-right"></i></a>
+                        <ul class="treeview-menu">
+                            <li><a href="#"><i class="fa fa-gg-circle"></i>品牌新增</a></li>
+                            <li><a href="#"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#"><i class="fa fa-align-justify"></i>風格管理<i class="fa fa-angle-down pull-right"></i></a>
                         <ul class="treeview-menu">
                             <li><a href="#"><i class="fa fa-leaf"></i>風格新增</a></li>
