--- a/web/view/style/styleList.html
+++ b/web/view/style/styleList.html
@@ -16,7 +16,7 @@
             <!-- Main content -->
             <section class="content">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         \{if $error != ''\}
                         <div class="alert alert-warning alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -38,11 +38,11 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        \{foreach from=$styleData item=style\}
+                                        \{foreach from=$allStyleData item=style\}
                                         <tr>
-                                            <td>name</td>
+                                            <td>\{$style.styleName\}</td>
                                             <td>image</td>
-                                            <td>date</td>
+                                            <td>\{$style.lastUpdateTime\}</td>
                                             <td>
                                                 <a href="../controller/styleController.php?action=styleEdit&styleId=\{$style.styleId\})">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
