Fix styleAdd & styleList layout

--- a/web/view/style/styleAdd.html
+++ b/web/view/style/styleAdd.html
@@ -85,8 +85,8 @@
                                             <input id="styleName" name="styleName" class="form-control" placeholder="輸入風格名稱">
                                         </div>
                                     </div>
-                                     <div id="stylePhotoDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">裝置圖片</label>
+                                    <div id="styleImageDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">風格圖片</label>
                                         <div class="col-sm-10">
                                             <input type="file" id="styleImage" name="styleImage" data-input="false" accept="image/*">
                                             <img id="styleImg" class="img-thumbnail" style="display:none">
