--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -14,14 +14,14 @@
                 <ul class="treeview-menu">
                     <li><a href="#"><i class="fa fa-align-justify"></i>品牌管理<i class="fa fa-angle-down pull-right"></i></a>
                         <ul class="treeview-menu">
-                            <li><a href="#"><i class="fa fa-gg-circle"></i>品牌新增</a></li>
-                            <li><a href="#"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a></li>
+                            <li><a href="../controller/brandController.php?action=brandAddPrepare"><i class="fa fa-gg-circle"></i>品牌新增</a></li>
+                            <li><a href="../controller/brandController.php?action=brandList"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a></li>
                         </ul>
                     </li>
                     <li><a href="#"><i class="fa fa-align-justify"></i>風格管理<i class="fa fa-angle-down pull-right"></i></a>
                         <ul class="treeview-menu">
-                            <li><a href="#"><i class="fa fa-leaf"></i>風格新增</a></li>
-                            <li><a href="#"><i class="fa fa-leaf"></i>風格檢視/修改</a></li>
+                            <li><a href="../controller/styleController.php?action=styleAddPrepare"><i class="fa fa-leaf"></i>風格新增</a></li>
+                            <li><a href="../controller/styleController.php?action=styleList"><i class="fa fa-leaf"></i>風格檢視/修改</a></li>
                         </ul>
                     </li>
                     <li><a href="#"><i class="fa fa-align-justify"></i>商品管理<i class="fa fa-angle-down pull-right"></i></a>
