--- a/web/view/style/styleEdit.html
+++ b/web/view/style/styleEdit.html
@@ -3,6 +3,56 @@
 
 <head>
     \{include file="../common/resource.html"\}
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
+    <script>
+        $(document).ready(function() {
+            $("#styleImage").filestyle({
+                size: "nr",
+                input: false,
+                buttonText: "上傳圖片",
+                buttonName: "btn-info",
+                iconName: "glyphicon glyphicon-camera"
+            });
+           
+
+            $("#styleImage").change(function() {
+                readURL(this, '#styleImg');
+            });
+            
+        });
+
+        function readURL(input, id) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function(e) {
+                    $(id).attr('src', e.target.result);
+                    $(id).css('display', '');
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        function fieldValidation(field) {
+            if ($.trim($(field).val()) == '') {
+                $(field + 'Div').addClass('has-error');
+                $(field + 'Div').val('');
+                return false;
+            } else {
+                $(field + 'Div').removeClass('has-error');
+            }
+            return true;
+        }
+
+        function formValidation() {
+            if (fieldValidation('styleName') ) {
+                return true;
+            } else {
+                BootstrapDialog.alert('請至少填寫風格名稱');
+                return false;
+            }
+        }
+    </script>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -11,7 +61,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1></h1>
+                <h1>風格檢視修改</h1>
             </section>
             <section class="content">
                 <div class="row">
@@ -24,52 +74,30 @@
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">編輯使用者</h3>
+                                <h3 class="box-title">修改風格</h3>
                             </div>
-                            <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/userController.php" onsubmit="return formValidation();">
+                            <form class="form-horizontal" method="post" action="../controller/styleController.php" onsubmit="formValidation()"">
                                 <div class="box-body">
-                                    <div id="emailDiv" class="form-group\{if $error == 'E-mail已有人使用'\} has-error\{/if\}">
-                                        <label for="email" class="col-sm-2 control-label">E-Mail</label>
+                                    <div id="styleNameDiv" class="form-group">
+                                        <label for="styleName" class="col-sm-2 control-label">風格名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="email" name="email" type="email" class="form-control" name="email" placeholder="輸入 E-Mail" value="\{$userData.email\}">
+                                            <input id="styleName" name="styleName" class="form-control" placeholder="輸入風格名稱" value="\{$styleData.styleName\}">
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="competence" class="col-sm-2 control-label">權限</label>
-                                        <select name="competence" class="selectpicker col-sm-10">
-
-                                            <option value="0" \{if $userData.competence == 0\}select: selected\{/if\}>管理員</option>
-                                            <option value="1" \{if $userData.competence == 1\}select: selected\{/if\}>專案人員</option>
-                                            <option value="2" \{if $userData.competence == 2\}select: selected\{/if\}>櫃台人員</option>
-                                            <option value="3" \{if $userData.competence == 3\}select: selected\{/if\}>行政人員</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="changePass" class="col-sm-2 control-label"></label>
+                                    <div id="styleImageDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">風格圖片</label>
                                         <div class="col-sm-10">
-                                            <button id="changePass" name="changePass" type="button" class="btn btn-info">更改密碼</button>
-                                        </div>
-                                    </div>
-                                    <div id="passwordDiv" class="form-group collapse">
-                                        <label for="password" class="col-sm-2 control-label">密碼</label>
-                                        <div class="col-sm-10">
-                                            <input id="password" name="password" type="password" class="form-control" name="password" minLength="6" placeholder="輸入密碼 (至少6位以上)">
-                                        </div>
-                                    </div>
-                                    <div id="repeatPasswordDiv" class="form-group collapse">
-                                        <label for="repeatPssword" class="col-sm-2 control-label">密碼確認</label>
-                                        <div class="col-sm-10">
-                                            <input id="repeatPassword" type="password" class="form-control" name="repeatPassword" minLength="6" placeholder="重複輸入密碼">
+                                            <input type="file" id="styleImage" name="styleImage" data-input="false" accept="image/*">
+                                            <img id="styleImg" class="img-thumbnail" style="display:none" src="\{$styleImg.path\}">
                                         </div>
                                     </div>
                                 </div>
                                 <!-- /.box-body -->
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/userController.php?action=viewUserList" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="updateUser">
-                                    <input type="hidden" name="userId" value="\{$userData.user_id\}">
-                                    <button type="submit" class="btn btn-primary">更新</button>
+                                    <a href="../controller/styleController.php?action=styleList" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="styleEdit">
+                                    <input type="hidden" name="styleId" value="\{$styleData.styleId\}">
+                                    <button type="submit" class="btn btn-success">更新</button>
                                 </div>
                             </form>
                         </div>
@@ -79,7 +107,6 @@
         </div>
         \{include file="../common/footer.html"\}
     </div>
-    <script src="../javascript/userEdit.js"></script>
 </body>
 
 </html>
