--- a/web/view/main.html
+++ b/web/view/main.html
@@ -8,21 +8,17 @@
 <body class="hold-transition skin-yellow sidebar-mini">
   <div class="wrapper">
     \{include file="common/header.html"\} \{include file="common/menu.html"\}
-    <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
-      <!-- Content Header (Page header) -->
+      <!-- Content Header -->
       <section class="content-header">
         <h1>請點選左邊選單進行功能操作</h1>
       </section>
       <!-- Main content -->
       <section class="content">
       </section>
-      <!-- /.content -->
     </div>
-    <!-- /.content-wrapper -->
     \{include file="common/footer.html"\}
   </div>
-  <!-- ./wrapper -->
 </body>
 
 </html>
