BrandAdd and brandList layout

--- a/web/view/brand/brandList.html
+++ b/web/view/brand/brandList.html
@@ -32,6 +32,7 @@
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
                                             <th>品牌名稱</th>
+                                            <th>品牌描述</th>
                                             <th>使用圖片</th>
                                             <th>最後更新時間</th>
                                             <th>操作選項</th>
