--- a/web/view/brand/brandAdd.html
+++ b/web/view/brand/brandAdd.html
@@ -85,6 +85,12 @@
                                             <input id="brandName" name="brandName" class="form-control" placeholder="輸入品牌名稱">
                                         </div>
                                     </div>
+                                    <div id="descriptionDiv" class="form-group">
+                                        <label for="description" class="col-sm-2 control-label">品牌描述</label>
+                                        <div class="col-sm-10">
+                                            <textarea id="description" name="description" class="form-control" placeholder="輸入品牌描述"  style= "overflow:hidden;"></textarea>
+                                        </div>
+                                    </div>
                                      <div id="brandImageDiv" class="form-group">
                                         <label class="col-sm-2 control-label">品牌圖片</label>
                                         <div class="col-sm-10">
