--- a/web/view/common/header.html
+++ b/web/view/common/header.html
@@ -1,7 +1,7 @@
 <header class="main-header">
     <!-- Logo -->
     <div class="logo">
-        <img src="../image/living3_icon.png" style="width: 20%;">
+        <img src="../image/glasses_icon.png" style="width: 30%;">
     </div>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
