--- a/web/view/common/resource.html
+++ b/web/view/common/resource.html
@@ -3,7 +3,7 @@
 <title>興南眼鏡行後端網站管理系統</title>
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<link rel="shortcut icon" href="../favicon.ico" />
+<link rel="shortcut icon" href="../glasses_icon.png" />
 <!-- Bootstrap 3.3.5 -->
 <link rel="stylesheet" href="../theme/AdminLTE/bootstrap/css/bootstrap.min.css">
 <!-- Bootstrap dialog 1.34.7 -->
