Edit and Delete brand and fix some style insert bug

--- a/web/view/style/styleEdit.html
+++ b/web/view/style/styleEdit.html
@@ -74,7 +74,7 @@
                             <div class="box-header with-border">
                                 <h3 class="box-title">修改風格</h3>
                             </div>
-                            <form class="form-horizontal" method="post"  enctype="multipart/form-data" action="../controller/styleController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/styleController.php">
                                 <div class="box-body">
                                     <div id="styleNameDiv" class="form-group">
                                         <label for="styleName" class="col-sm-2 control-label">風格名稱</label>
