--- a/web/view/brand/brandEdit.html
+++ b/web/view/brand/brandEdit.html
@@ -33,29 +33,28 @@
             }
         }
 
-        function fieldValidation(field) {
-            if ($.trim($(field).val()) == '') {
-                $(field + 'Div').addClass('has-error');
-                $(field + 'Div').val('');
-                return false;
-            } else {
-                $(field + 'Div').removeClass('has-error');
-            }
-            return true;
-        }
-
-        function formValidation() {
-            if (fieldValidation('brandName') ) {
-                return true;
-            } else {
-                BootstrapDialog.alert('請至少填寫風格名稱');
-                return false;
-            }
+        function deleteImage(imageId){
+            BootstrapDialog.show({
+                title:'提醒',
+                message: '確定刪除該品牌圖片嗎?',
+                buttons: [{
+                    label: '確定',
+                    cssClass: 'btn-danger',
+                    action: function(){
+                        location='../controller/brandController.php?action=brandImageDelete&imageId=' + imageId ;
+                    }
+                },{
+                    label: '取消',
+                    action: function(dialogItself){
+                        dialogItself.close();
+                    }
+                }]
+            });
         }
     </script>
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
         \{include file="../common/header.html"\}
         \{include file="../common/menu.html"\}
@@ -76,19 +75,32 @@
                             <div class="box-header with-border">
                                 <h3 class="box-title">品牌修改</h3>
                             </div>
-                            <form class="form-horizontal" method="post" action="../controller/brandController.php" onsubmit="formValidation()"">
+                            <form class="form-horizontal" method="post"  enctype="multipart/form-data" action="../controller/brandController.php" >
                                 <div class="box-body">
                                     <div id="brandNameDiv" class="form-group">
-                                        <label for="brandName" class="col-sm-2 control-label">風格名稱</label>
+                                        <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
                                         <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" placeholder="輸入風格名稱" value="\{$styelData.brandName\}">
+                                            <input id="brandName" name="brandName" class="form-control" value="\{$brandData.brandName\}">
+                                        </div>
+                                    </div>
+                                    <div id="descriptionDiv" class="form-group">
+                                        <label for="description" class="col-sm-2 control-label">品牌描述</label>
+                                        <div class="col-sm-10">
+                                            <input id="description" name="description" class="form-control" value="\{$brandData.description\}">
                                         </div>
                                     </div>
                                     <div id="brandImageDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">風格圖片</label>
+                                        <label class="col-sm-2 control-label">品牌圖片</label>
                                         <div class="col-sm-10">
-                                            <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*">
-                                            <img id="brandImg" class="img-thumbnail" style="display:none" src="\{$brandImg.path\}">
+                                            <div class = "form-inline" style="display:inline-block;">
+                                                <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*" style="display: inline;">
+                                                \{if $brandData.imageId != ''\}
+                                                <a class="btn btn-sm btn-danger" onclick="deleteImage('\{$brandData.imageId\}')"><i class="glyphicon glyphicon-remove"></i>
+                                                </a> 
+                                                \{/if\}
+                                            </div> 
+                                            <img id="brandImg" class="img-thumbnail" src="\{$brandData.path\}" alt="尚未上傳圖片">
+                                            
                                         </div>
                                     </div>
                                 </div>
@@ -97,6 +109,9 @@
                                     <a href="../controller/brandController.php?action=brandList" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="brandEdit">
                                     <input type="hidden" name="brandId" value="\{$brandData.brandId\}">
+                                    \{if $brandData.imageId != ''\}
+                                    <input type="hidden" name="imageId" value="\{$brandData.imageId\}">
+                                    \{/if\}
                                     <button type="submit" class="btn btn-success">更新</button>
                                 </div>
                             </form>
