--- a/web/view/brand/brandList.html
+++ b/web/view/brand/brandList.html
@@ -3,6 +3,64 @@
 
 <head>
     \{include file="../common/resource.html"\}
+     <!-- DataTables -->
+    <link rel="stylesheet" href="../plugins/datatables/dataTables.bootstrap.css">
+    <script src="../plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
+    <script>
+    $(function () {
+        $('#brandListTable').DataTable({
+            "columnDefs": [
+                { "orderable": false, "targets": 1 },
+                { "orderable": false, "targets": 2 },
+                { "orderable": false, "targets": 4 }
+            ],
+            "paging": false,
+            "lengthChange": false,
+            "searching": false,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false
+        });
+    });
+    function deleteBrandWithImg(brandId,imageId){
+        BootstrapDialog.show({
+            title:'提醒',
+            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有品牌分類',
+            buttons: [{
+                label: '確定',
+                cssClass: 'btn-danger',
+                action: function(){
+                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId + '&imageId=' + imageId ;
+                }
+            },{
+                label: '取消',
+                action: function(dialogItself){
+                    dialogItself.close();
+                }
+            }]
+        });
+    }
+
+    function deleteBrand(brandId){
+        BootstrapDialog.show({
+            title:'提醒',
+            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有風格分類',
+            buttons: [{
+                label: '確定',
+                cssClass: 'btn-danger',
+                action: function(){
+                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId;
+                }
+            },{
+                label: '取消',
+                action: function(dialogItself){
+                    dialogItself.close();
+                }
+            }]
+        });
+    }
+    </script>
 </head>
 
 <body class="hold-transition skin-yellow sidebar-mini">
@@ -16,7 +74,7 @@
             <!-- Main content -->
             <section class="content">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-10">
                         \{if $error != ''\}
                         <div class="alert alert-warning alert-dismissable text-center">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -28,7 +86,7 @@
                                 <h3 class="box-title">品牌列表</h3>
                             </div>
                             <div class="box-body">
-                                <table class="table table-striped">
+                                <table class="table table-striped" id="brandListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
                                             <th>品牌名稱</th>
@@ -42,15 +100,22 @@
                                         \{foreach from=$allbrandData item=brand\}
                                         <tr>
                                             <td>\{$brand.brandName\}</td>
-                                            <td>image</td>
+                                            <td>\{$brand.description\}</td>
+                                            <td><img src="\{$brand.path\}" alt="尚未上傳圖片" width="350px"></td>
                                             <td>\{$brand.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/brandController.php?action=brandEdit&brandId=\{$brand.brandId\})">
+                                                <a href="../controller/brandController.php?action=brandEditPrepare&brandId=\{$brand.brandId\}&imageId=\{$brand.imageId\} ">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>&nbsp;
+                                                \{if $brand.imageId != ''\}
                                                 <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deletebrand(\{$brand.brandId\});"><i class="glyphicon glyphicon-remove"></i></button>
+                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrandWithImg('\{$brand.brandId\}' , '\{$brand.imageId\}');"><i class="glyphicon glyphicon-remove"></i></button>
+                                                </a>&nbsp;
+                                                \{else\}
+                                                <a href="#">
+                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrand('\{$brand.brandId\}');"><i class="glyphicon glyphicon-remove"></i></button>
                                                 </a>
+                                                \{/if\}
                                             </td>
                                         </tr>
                                         \{/foreach\}
