user: Add user part in sidebar

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -87,19 +87,19 @@
                 </a>
                 <ul class="treeview-menu">
                     <li>
-                        <a href="#">
+                        <a href="../controller/userController.php?action=userAddPrepare">
                             <i class="fa fa-user"></i>會員新增</a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="../controller/userController.php?action=userEditPrepare">
                             <i class="fa fa-user"></i>會員檢視/修改</a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="../controller/userController.php?action=userShoppingRecordAddPrepare">
                             <i class="fa fa-shopping-cart"></i>會員購物紀錄新增</a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="../controller/userController.php?action=userShoppingRecordEditPrepare">
                             <i class="fa fa-shopping-cart"></i>會員購物紀錄檢視/修改</a>
                     </li>
                 </ul>
