--- a/web/view/user/userAdd.html
+++ b/web/view/user/userAdd.html
@@ -5,13 +5,12 @@
     \{include file="../common/resource.html"\}
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-yellow sidebar-mini">
     <div class="wrapper">
-        \{include file="../common/header.html"\}
-        \{include file="../common/menu.html"\}
+        \{include file="../common/header.html"\} \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1></h1>
+                <h1>會員新增</h1>
             </section>
             <section class="content">
                 <div class="row">
@@ -21,57 +20,78 @@
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                             <h4 style="display: inline;">\{$error\}</h4>
                         </div>
+                        \{/if\} \{if $msg != ''\}
+                        <div class="alert alert-success alert-dismissable text-center">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                            <h4 style="display: inline;">\{$msg\}</h4>
+                        </div>
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
                                 <h3 class="box-title">新增使用者</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" action="../controller/userController.php" onsubmit="return formValidation();">
+                            <form class="form-horizontal" method="post" action="../controller/userController.php">
                                 <div class="box-body">
-                                    <div id="emailDiv" class="form-group\{if $error == 'E-mail已有人使用'\} has-error\{/if\}">
-                                        <label for="email" class="col-sm-2 control-label">E-Mail</label>
+                                    <!-- name -->
+                                    <div id="userNameDiv" class="form-group">
+                                        <label for="userName" class="col-sm-2 control-label">使用者姓名</label>
                                         <div class="col-sm-10">
-                                            <input id="email" name="email" type="email" class="form-control" name="email" placeholder="輸入 E-Mail">
+                                            <input id="userName" name="userName" class="form-control" placeholder="使用者姓名">
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="competence" class="col-sm-2 control-label">權限</label>
-                                        <select name="competence" class="selectpicker col-sm-10">
-                                            <option value="0">管理員</option>
-                                            <option value="1">專案人員</option>
-                                            <option value="2">櫃台人員</option>
-                                            <option value="3">行政人員</option>
-                                        </select>
+
+                                    <!--gender-->
+                                    <div id="genderDiv" class="form-group">
+                                        <label for="gender" class="col-sm-2 control-label">性別</label>
+                                        <div class="col-sm-10">
+                                            <select class="form-control" id="gender" name="gender">
+                                                <option value="1">男</option>
+                                                <option value="0">女</option>
+                                            </select>
+                                        </div>
+
                                     </div>
-                                    <div id="passwordDiv" class="form-group">
+
+                                    <!--account-->
+                                    <div id="accountNameDiv" class="form-group">
+                                        <label for="account" class="col-sm-2 control-label">帳號</label>
+                                        <div class="col-sm-10">
+                                            <input id="account" name="account" class="form-control" placeholder="帳號">
+                                        </div>
+                                    </div>
+
+                                    <!--password-->
+                                    <div id="userPasswordDiv" class="form-group">
                                         <label for="password" class="col-sm-2 control-label">密碼</label>
                                         <div class="col-sm-10">
-                                            <input id="password" name="password" type="password" class="form-control" name="password" minLength="6" placeholder="輸入密碼 (至少6位以上)">
+                                            <input id="password" type="password" name="password" class="form-control" placeholder="密碼">
                                         </div>
                                     </div>
-                                    <div id="repeatPasswordDiv" class="form-group">
-                                        <label for="repeatPssword" class="col-sm-2 control-label">密碼確認</label>
+
+                                    <!--phoneNumber-->
+                                    <div id="phoneNameDiv" class="form-group">
+                                        <label for="password" class="col-sm-2 control-label">手機號碼</label>
                                         <div class="col-sm-10">
-                                            <input id="repeatPassword" type="password" class="form-control" name="repeatPassword" minLength="6" placeholder="重複輸入密碼">
+                                            <input id="phoneNumber" name="phoneNumber" class="form-control" placeholder="手機號碼">
                                         </div>
                                     </div>
-                                </div>
-                                <!-- /.box-body -->
-                                <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/userController.php?action=main" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="addUser">
-                                    <button type="submit" class="btn btn-primary">確定</button>
+
+                                    <!-- /.box-body -->
+                                    <div class="box-footer" style="text-align: right;">
+                                        <a href="../controller/userController.php" class="btn btn-warning">取消</a>
+                                        <input type="hidden" name="action" value="userAdd">
+                                        <button type="submit" class="btn btn-primary">確定</button>
+                                    </div>
                                 </div>
                             </form>
                         </div>
                     </div>
                 </div>
             </section>
+
         </div>
-        \{include file="../common/footer.html"\}
     </div>
-    <script src="../javascript/userAdd.js"></script>
 </body>
 
 </html>
