Modify menu path, header color, de setting

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -20,10 +20,12 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="../controller/brandController.php?action=brandAddPrepare"><i class="fa fa-gg-circle"></i>品牌新增</a>
+                                <a href="../controller/brandController.php?action=brandAddPrepare">
+                                    <i class="fa fa-gg-circle"></i>品牌新增</a>
                             </li>
                             <li>
-                            <a href="../controller/brandController.php?action=brandList"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
+                                <a href="../controller/brandController.php?action=brandList">
+                                    <i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
                             </li>
                         </ul>
                     </li>
@@ -33,8 +35,14 @@
                             <i class="fa fa-angle-down pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="../controller/styleController.php?action=styleAddPrepare"><i class="fa fa-leaf"></i>風格新增</a></li>
-                            <li><a href="../controller/styleController.php?action=styleList"><i class="fa fa-leaf"></i>風格檢視/修改</a></li>
+                            <li>
+                                <a href="../controller/styleController.php?action=styleAddPrepare">
+                                    <i class="fa fa-leaf"></i>風格新增</a>
+                            </li>
+                            <li>
+                                <a href="../controller/styleController.php?action=styleList">
+                                    <i class="fa fa-leaf"></i>風格檢視/修改</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -203,16 +211,19 @@
                 </a>
                 <ul class="treeview-menu">
                     <li>
-                        <a href="#">
-                            <i class="fa fa-bar-chart"></i>消費記錄統計</a>
+                        <a href="../controller/statisticController.php?action=orderHistory">
+                            <i class="fa fa-bar-chart"></i>消費記錄統計
+                        </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="fa fa-bar-chart"></i>商品點擊率統計</a>
+                        <a href="../controller/statisticController.php?action=goodsClick">
+                            <i class="fa fa-bar-chart"></i>商品點擊率統計
+                        </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="fa fa-bar-chart"></i>文章點擊率統計</a>
+                        <a href="../controller/statisticController.php?action=articleClick">
+                            <i class="fa fa-bar-chart"></i>文章點擊率統計
+                        </a>
                     </li>
                 </ul>
             </li>
