--- a/web/view/style/styleAdd.html
+++ b/web/view/style/styleAdd.html
@@ -75,7 +75,7 @@
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/styleController.php?action=main" class="btn btn-warning">取消</a>
+                                    <a href="../controller/styleController.php?action=styleAddPrepare" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="styleAdd">
                                     <button type="submit" class="btn btn-success" >確定</button>
                                 </div>
