--- a/web/view/brand/brandAdd.html
+++ b/web/view/brand/brandAdd.html
@@ -100,7 +100,7 @@
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/brandController.php?action=main" class="btn btn-warning">取消</a>
+                                    <a href="../controller/brandController.php?action=brandAddPrepare" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="brandAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
