--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -23,7 +23,7 @@
                                 <a href="../controller/brandController.php?action=brandAddPrepare"><i class="fa fa-gg-circle"></i>品牌新增</a>
                             </li>
                             <li>
-                            <a href="../controller/brandController.php?action=brandList"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
+                                <a href="../controller/brandController.php?action=brandList"><i class="fa fa-gg-circle"></i>品牌檢視/修改</a>
                             </li>
                         </ul>
                     </li>
@@ -44,35 +44,35 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="#">
+                                <a href="../controller/frameController.php?action=frameAddPrepare">
                                     <i class="fa fa-tripadvisor"></i> 鏡框新增</a>
                             </li>
                             <li>
-                                <a href="#">
-                                    <i class="fa fa-tripadvisor"></i> 經框檢視/修改</a>
+                                <a href="../controller/frameController.php?action=frameList">
+                            <i class="fa fa-tripadvisor"></i> 經框檢視/修改</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/glassController.php?action=glassAddPrepare">
                                     <i class="fa fa-circle-o"></i> 鏡片新增</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/glassController.php?action=glassList">
                                     <i class="fa fa-circle-o"></i> 經片檢視/修改</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/lenController.php?action=lenAddPrepare">
                                     <i class="fa fa-eye"></i>隱形眼鏡新增</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/lenController.php?action=lenList">
                                     <i class="fa fa-eye"></i>隱形眼鏡檢視/修改</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/partController.php?action=partAddPrepare">
                                     <i class="fa fa-wrench"></i>零件新增</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/partController.php?action=partList">
                                     <i class="fa fa-wrench"></i>零件檢視/修改</a>
                             </li>
                         </ul>
