--- a/web/view/glass/glassAdd.html
+++ b/web/view/glass/glassAdd.html
@@ -5,34 +5,6 @@
     \{include file="../common/resource.html"\}
     <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
     <script>
-        $(document).ready(function() {
-            $("#brandImage").filestyle({
-                size: "nr",
-                input: false,
-                buttonText: "上傳圖片",
-                buttonName: "btn-info",
-                iconName: "glyphicon glyphicon-camera"
-            });
-           
-
-            $("#brandImage").change(function() {
-                readURL(this, '#brandImg');
-            });
-            
-        });
-
-        function readURL(input, id) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-
-                reader.onload = function(e) {
-                    $(id).attr('src', e.target.result);
-                    $(id).css('display', '');
-                }
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-
         function fieldValidation(field) {
             if ($.trim($(field).val()) == '') {
                 $(field + 'Div').addClass('has-error');
@@ -45,10 +17,10 @@
         }
 
         function formValidation() {
-            if (fieldValidation('brandName') ) {
+            if (fieldValidation('glassName') ) {
                 return true;
             } else {
-                BootstrapDialog.alert('請至少填寫品牌名稱');
+                BootstrapDialog.alert('請至少填寫鏡片名稱');
                 return false;
             }
         }
@@ -61,7 +33,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>品牌新增</h1>
+                <h1>鏡片新增</h1>
             </section>
             <section class="content">
                 <div class="row">
@@ -74,34 +46,49 @@
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">新增品牌</h3>
+                                <h3 class="box-title">新增鏡片</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/brandController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/glassController.php" onsubmit="formValidation()">
                                 <div class="box-body">
-                                    <div id="brandNameDiv" class="form-group">
-                                        <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
-                                        <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" placeholder="輸入品牌名稱">
+                                    <div id="glassNameDiv" class="form-group">
+                                        <label for="glassName" class="col-sm-2 control-label">鏡片名稱</label>
+                                        <div class="col-sm-6">
+                                            <input id="glassName" name="glassName" class="form-control" placeholder="輸入鏡片名稱">
                                         </div>
                                     </div>
-                                    <div id="descriptionDiv" class="form-group">
-                                        <label for="description" class="col-sm-2 control-label">品牌描述</label>
-                                        <div class="col-sm-10">
-                                            <textarea id="description" name="description" class="form-control" placeholder="輸入品牌描述"  style= "overflow:hidden;"></textarea>
+                                    <div id="glassNoDiv" class="form-group">
+                                        <label for="glassNo" class="col-sm-2 control-label">鏡片型號</label>
+                                        <div class="col-sm-6">
+                                            <input id="glassNo" name="glassNo" class="form-control" placeholder="輸入鏡片型號">
                                         </div>
                                     </div>
-                                     <div id="brandImageDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">品牌圖片</label>
+                                    <div id="glassBrandDiv" class="form-group">
+                                        <label for="glassBrand" class="col-sm-2 control-label">鏡片品牌</label>
+                                        <div class="col-sm-6">
+                                            <select class="selectpicker" name="glassBrand" id="glassBrand" data-live-search="true" title="請選擇品牌">
+                                                \{foreach from=$brandData item=brand \}
+                                                <option value='\{$brand.brandId\}'>\{$brand.brandName\}</option>
+                                                \{/foreach\}
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div id="glassTypeDiv" class="form-group">
+                                        <label for="glassType" class="col-sm-2 control-label">鏡片種類</label>
+                                        <div class="col-sm-6">
+                                            <input id="type" name="type" class="form-control" placeholder="輸入鏡片種類">
+                                        </div>
+                                    </div>
+                                    <div id="memoDiv" class="form-group">
+                                        <label for="memo" class="col-sm-2 control-label">備註</label>
                                         <div class="col-sm-10">
-                                            <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*">
-                                            <img id="brandImg" class="img-thumbnail" style="display:none">
+                                            <textarea id="memo" name="memo" class="form-control" placeholder="輸入備註" style="overflow:hidden;"></textarea>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/brandController.php?action=main" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="brandAdd">
+                                    <a href="../controller/glassController.php?action=glassAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="glassAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
                             </form>
