--- a/web/view/glass/glassEdit.html
+++ b/web/view/glass/glassEdit.html
@@ -5,52 +5,6 @@
     \{include file="../common/resource.html"\}
     <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
     <script>
-        $(document).ready(function() {
-            $("#brandImage").filestyle({
-                size: "nr",
-                input: false,
-                buttonText: "上傳圖片",
-                buttonName: "btn-info",
-                iconName: "glyphicon glyphicon-camera"
-            });
-           
-
-            $("#brandImage").change(function() {
-                readURL(this, '#brandImg');
-            });
-            
-        });
-
-        function readURL(input, id) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-
-                reader.onload = function(e) {
-                    $(id).attr('src', e.target.result);
-                    $(id).css('display', '');
-                }
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-
-        function deleteImage(imageId){
-            BootstrapDialog.show({
-                title:'提醒',
-                message: '確定刪除該品牌圖片嗎?',
-                buttons: [{
-                    label: '確定',
-                    cssClass: 'btn-danger',
-                    action: function(){
-                        location='../controller/brandController.php?action=brandImageDelete&imageId=' + imageId ;
-                    }
-                },{
-                    label: '取消',
-                    action: function(dialogItself){
-                        dialogItself.close();
-                    }
-                }]
-            });
-        }
     </script>
 </head>
 
@@ -60,7 +14,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>品牌檢視修改</h1>
+                <h1>鏡片檢視修改</h1>
             </section>
             <section class="content">
                 <div class="row">
@@ -73,45 +27,55 @@
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">品牌修改</h3>
+                                <h3 class="box-title">鏡片修改</h3>
                             </div>
-                            <form class="form-horizontal" method="post"  enctype="multipart/form-data" action="../controller/brandController.php" >
+                            <form class="form-horizontal" method="post" action="../controller/glassController.php" >
                                 <div class="box-body">
-                                    <div id="brandNameDiv" class="form-group">
-                                        <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
-                                        <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" value="\{$brandData.brandName\}">
+                                    <div id="glassNameDiv" class="form-group">
+                                        <label for="glassName" class="col-sm-2 control-label">鏡片名稱</label>
+                                        <div class="col-sm-6">
+                                            <input id="glassName" name="glassName" class="form-control" placeholder="輸入鏡片名稱" value="\{$glassData.glassName\}">
                                         </div>
                                     </div>
-                                    <div id="descriptionDiv" class="form-group">
-                                        <label for="description" class="col-sm-2 control-label">品牌描述</label>
-                                        <div class="col-sm-10">
-                                            <input id="description" name="description" class="form-control" value="\{$brandData.description\}">
+                                    <div id="glassNoDiv" class="form-group">
+                                        <label for="glassNo" class="col-sm-2 control-label">鏡片型號</label>
+                                        <div class="col-sm-6">
+                                            <input id="glassNo" name="glassNo" class="form-control" placeholder="輸入鏡片型號" value="\{$glassData.no\}">
                                         </div>
                                     </div>
-                                    <div id="brandImageDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">品牌圖片</label>
-                                        <div class="col-sm-10">
-                                            <div class = "form-inline" style="display:inline-block;">
-                                                <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*" style="display: inline;">
-                                                \{if $brandData.imageId != ''\}
-                                                <a class="btn btn-sm btn-danger" onclick="deleteImage('\{$brandData.imageId\}')"><i class="glyphicon glyphicon-remove"></i>
-                                                </a> 
-                                                \{/if\}
-                                            </div> 
-                                            <img id="brandImg" class="img-thumbnail" src="\{$brandData.path\}" alt="尚未上傳圖片">
-                                            
+                                    <div id="glassBrandDiv" class="form-group">
+                                        <label for="glassBrand" class="col-sm-2 control-label">鏡片品牌</label>
+                                        <div class="col-sm-3">
+                                            <select class="selectpicker" name="glassBrand" id="glassBrand">
+                                               \{foreach from=$brandData item=brand \}
+                                                    \{if $glassData.brandId == $brand.brandId\}
+                                                        <option value='\{$brand.brandId\}' selected>\{$brand.brandName\}</option>
+                                                    \{else\}
+                                                        <option value='\{$brand.brandId\}'>\{$brand.brandName\}</option>
+                                                    \{/if\}
+                                                \{/foreach\}
+                                            </select>
                                         </div>
                                     </div>
+                                    <div id="glassTypeDiv" class="form-group">
+                                        <label for="glassType" class="col-sm-2 control-label">鏡片種類</label>
+                                        <div class="col-sm-6">
+                                            <input id="type" name="type" class="form-control" value="\{$glassData.type\}" placeholder="輸入鏡片種類">
+                                        </div>
+                                    </div>
+                                    <div id="memoDiv" class="form-group">
+                                        <label for="memo" class="col-sm-2 control-label">備註</label>
+                                        <div class="col-sm-10">
+                                            <textarea id="memo" name="memo" class="form-control" placeholder="輸入備註" value="\{$glassData.memo\}" style="overflow:hidden;"></textarea>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                                 <!-- /.box-body -->
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/brandController.php?action=brandList" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="brandEdit">
-                                    <input type="hidden" name="brandId" value="\{$brandData.brandId\}">
-                                    \{if $brandData.imageId != ''\}
-                                    <input type="hidden" name="imageId" value="\{$brandData.imageId\}">
-                                    \{/if\}
+                                    <a href="../controller/glassController.php?action=glassList" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="glassEdit">
+                                    <input type="hidden" name="glassId" value="\{$glassData.glassId\}">
                                     <button type="submit" class="btn btn-success">更新</button>
                                 </div>
                             </form>
