--- a/web/view/len/lenAdd.html
+++ b/web/view/len/lenAdd.html
@@ -3,36 +3,7 @@
 
 <head>
     \{include file="../common/resource.html"\}
-    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
     <script>
-        $(document).ready(function() {
-            $("#brandImage").filestyle({
-                size: "nr",
-                input: false,
-                buttonText: "上傳圖片",
-                buttonName: "btn-info",
-                iconName: "glyphicon glyphicon-camera"
-            });
-           
-
-            $("#brandImage").change(function() {
-                readURL(this, '#brandImg');
-            });
-            
-        });
-
-        function readURL(input, id) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-
-                reader.onload = function(e) {
-                    $(id).attr('src', e.target.result);
-                    $(id).css('display', '');
-                }
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-
         function fieldValidation(field) {
             if ($.trim($(field).val()) == '') {
                 $(field + 'Div').addClass('has-error');
@@ -45,10 +16,10 @@
         }
 
         function formValidation() {
-            if (fieldValidation('brandName') ) {
+            if (fieldValidation('lenName') ) {
                 return true;
             } else {
-                BootstrapDialog.alert('請至少填寫品牌名稱');
+                BootstrapDialog.alert('請至少填寫隱形眼鏡名稱');
                 return false;
             }
         }
@@ -61,7 +32,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>品牌新增</h1>
+                <h1>隱形眼鏡新增</h1>
             </section>
             <section class="content">
                 <div class="row">
@@ -74,34 +45,62 @@
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">新增品牌</h3>
+                                <h3 class="box-title">新增隱形眼鏡</h3>
                             </div>
                             <!-- form-->
-                            <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/brandController.php" onsubmit="formValidation()">
+                            <form class="form-horizontal" method="post" action="../controller/lenController.php" onsubmit="formValidation()">
                                 <div class="box-body">
-                                    <div id="brandNameDiv" class="form-group">
-                                        <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
-                                        <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" placeholder="輸入品牌名稱">
+                                    <div id="lenNameDiv" class="form-group">
+                                        <label for="lenName" class="col-sm-2 control-label">隱形眼鏡名稱</label>
+                                        <div class="col-sm-6">
+                                            <input id="lenName" name="lenName" class="form-control" placeholder="隱形眼鏡名稱">
                                         </div>
                                     </div>
-                                    <div id="descriptionDiv" class="form-group">
-                                        <label for="description" class="col-sm-2 control-label">品牌描述</label>
-                                        <div class="col-sm-10">
-                                            <textarea id="description" name="description" class="form-control" placeholder="輸入品牌描述"  style= "overflow:hidden;"></textarea>
+                                    <div id="lenBrandDiv" class="form-group">
+                                        <label for="lenBrand" class="col-sm-2 control-label">隱形眼鏡品牌</label>
+                                        <div class="col-sm-6">
+                                            <select class="selectpicker" name="lenBrand" id="lenBrand" data-live-search="true" title="請選擇品牌">
+                                                \{foreach from=$brandData item=brand \}
+                                                <option value='\{$brand.brandId\}'>\{$brand.brandName\}</option>
+                                                \{/foreach\}
+                                            </select>
                                         </div>
                                     </div>
-                                     <div id="brandImageDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">品牌圖片</label>
-                                        <div class="col-sm-10">
-                                            <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*">
-                                            <img id="brandImg" class="img-thumbnail" style="display:none">
+                                    <div id="quantityDiv" class="form-group">
+                                        <label for="quantity" class="col-sm-2 control-label">隱形眼鏡片數</label>
+                                        <div class="col-sm-6">
+                                            <input type="number" id="quantity" name="quantity" class="form-control" data-bind="value:replyNumber" min="0" placeholder="隱形眼鏡片數">
+                                        </div>
+                                    </div>
+                                    <div id="sizeDiv" class="form-group">
+                                        <label for="size" class="col-sm-2 control-label">隱形眼鏡大小</label>
+                                        <div class="col-sm-6">
+                                            <input id="size" name="size" class="form-control" placeholder="隱形眼鏡大小">
+                                        </div>
+                                    </div>
+                                    <div id="periodDiv" class="form-group">
+                                        <label for="period" class="col-sm-2 control-label">使用天數</label>
+                                        <div class="col-sm-3">
+                                            <select class="selectpicker" name="period" id="period">
+                                                <option value=1>日拋</option>
+                                                <option value=2>月拋</option>
+                                                <option value=3>周拋</option>
+                                                <option value=4>雙周拋</option>
+                                                <option value=5>季拋</option>
+                                                <option value=6>硬式</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div id="colorDiv" class="form-group">
+                                        <label for="lenColor" class="col-sm-2 control-label">隱形眼鏡顏色</label>
+                                        <div class="col-sm-6">
+                                            <input id="color" name="color" class="form-control" placeholder="隱形眼鏡顏色">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/brandController.php?action=main" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="brandAdd">
+                                    <a href="../controller/lenController.php?action=lenAddPrepare" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="lenAdd">
                                     <button type="submit" class="btn btn-success">確定</button>
                                 </div>
                             </form>
