--- a/web/view/len/lenEdit.html
+++ b/web/view/len/lenEdit.html
@@ -5,52 +5,11 @@
     \{include file="../common/resource.html"\}
     <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
     <script>
-        $(document).ready(function() {
-            $("#brandImage").filestyle({
-                size: "nr",
-                input: false,
-                buttonText: "上傳圖片",
-                buttonName: "btn-info",
-                iconName: "glyphicon glyphicon-camera"
-            });
-           
-
-            $("#brandImage").change(function() {
-                readURL(this, '#brandImg');
-            });
-            
-        });
-
-        function readURL(input, id) {
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-
-                reader.onload = function(e) {
-                    $(id).attr('src', e.target.result);
-                    $(id).css('display', '');
-                }
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-
-        function deleteImage(imageId){
-            BootstrapDialog.show({
-                title:'提醒',
-                message: '確定刪除該品牌圖片嗎?',
-                buttons: [{
-                    label: '確定',
-                    cssClass: 'btn-danger',
-                    action: function(){
-                        location='../controller/brandController.php?action=brandImageDelete&imageId=' + imageId ;
-                    }
-                },{
-                    label: '取消',
-                    action: function(dialogItself){
-                        dialogItself.close();
-                    }
-                }]
-            });
-        }
+    $(document).ready(function() {
+        $('select[name=period]').val('\{$lenData.period\}');
+        $('select[name=period]').selectpicker('refresh');
+        //$('#period').selectpicker('val','\{$lenData.period\}');
+    })
     </script>
 </head>
 
@@ -60,7 +19,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>品牌檢視修改</h1>
+                <h1>隱形眼鏡檢視修改</h1>
             </section>
             <section class="content">
                 <div class="row">
@@ -73,45 +32,67 @@
                         \{/if\}
                         <div class="box box-primary">
                             <div class="box-header with-border">
-                                <h3 class="box-title">品牌修改</h3>
+                                <h3 class="box-title">隱形眼鏡修改</h3>
                             </div>
-                            <form class="form-horizontal" method="post"  enctype="multipart/form-data" action="../controller/brandController.php" >
+                            <form class="form-horizontal" method="post"  enctype="multipart/form-data" action="../controller/lenController.php" >
                                 <div class="box-body">
-                                    <div id="brandNameDiv" class="form-group">
-                                        <label for="brandName" class="col-sm-2 control-label">品牌名稱</label>
-                                        <div class="col-sm-10">
-                                            <input id="brandName" name="brandName" class="form-control" value="\{$brandData.brandName\}">
+                                    <div id="lenNameDiv" class="form-group">
+                                        <label for="lenName" class="col-sm-2 control-label">隱形眼鏡名稱</label>
+                                        <div class="col-sm-6">
+                                            <input id="lenName" name="lenName" class="form-control" placeholder="隱形眼鏡名稱" value="\{$lenData.lenName\}">
                                         </div>
                                     </div>
-                                    <div id="descriptionDiv" class="form-group">
-                                        <label for="description" class="col-sm-2 control-label">品牌描述</label>
-                                        <div class="col-sm-10">
-                                            <input id="description" name="description" class="form-control" value="\{$brandData.description\}">
+                                    <div id="lenBrandDiv" class="form-group">
+                                        <label for="lenBrand" class="col-sm-2 control-label">隱形眼鏡品牌</label>
+                                        <div class="col-sm-3">
+                                            <select class="selectpicker" name="lenBrand" id="lenBrand" data-live-search="true" title="請選擇品牌">
+                                                \{foreach from=$brandData item=brand \}
+                                                    \{if $lenData.brandId == $brand.brandId\}
+                                                        <option value='\{$brand.brandId\}' selected>\{$brand.brandName\}</option>
+                                                    \{else\}
+                                                        <option value='\{$brand.brandId\}'>\{$brand.brandName\}</option>
+                                                    \{/if\}
+                                                \{/foreach\}
+                                            </select>
                                         </div>
                                     </div>
-                                    <div id="brandImageDiv" class="form-group">
-                                        <label class="col-sm-2 control-label">品牌圖片</label>
-                                        <div class="col-sm-10">
-                                            <div class = "form-inline" style="display:inline-block;">
-                                                <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*" style="display: inline;">
-                                                \{if $brandData.imageId != ''\}
-                                                <a class="btn btn-sm btn-danger" onclick="deleteImage('\{$brandData.imageId\}')"><i class="glyphicon glyphicon-remove"></i>
-                                                </a> 
-                                                \{/if\}
-                                            </div> 
-                                            <img id="brandImg" class="img-thumbnail" src="\{$brandData.path\}" alt="尚未上傳圖片">
-                                            
+                                    <div id="quantityDiv" class="form-group">
+                                        <label for="quantity" class="col-sm-2 control-label">隱形眼鏡片數</label>
+                                        <div class="col-sm-6">
+                                            <input type="number" id="quantity" name="quantity" class="form-control" data-bind="value:replyNumber" value="\{$lenData.quantity\}" placeholder="隱形眼鏡片數">
+                                        </div>
+                                    </div>
+                                    <div id="sizeDiv" class="form-group">
+                                        <label for="size" class="col-sm-2 control-label">隱形眼鏡大小</label>
+                                        <div class="col-sm-6">
+                                            <input id="size" name="size" class="form-control" placeholder="隱形眼鏡大小" value="\{$lenData.size\}">
+                                        </div>
+                                    </div>
+                                    <div id="periodDiv" class="form-group">
+                                        <label for="period" class="col-sm-2 control-label">使用天數</label>
+                                        <div class="col-sm-3">
+                                            <select class="selectpicker" name="period" id="period">
+                                                <option value=1>日拋</option>
+                                                <option value=2>月拋</option>
+                                                <option value=3>周拋</option>
+                                                <option value=4>雙周拋</option>
+                                                <option value=5>季拋</option>
+                                                <option value=6>硬式</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div id="colorDiv" class="form-group">
+                                        <label for="lenColor" class="col-sm-2 control-label">隱形眼鏡顏色</label>
+                                        <div class="col-sm-6">
+                                            <input id="color" name="color" class="form-control" placeholder="隱形眼鏡顏色" value="\{$lenData.color\}">
                                         </div>
                                     </div>
                                 </div>
                                 <!-- /.box-body -->
                                 <div class="box-footer" style="text-align: right;">
-                                    <a href="../controller/brandController.php?action=brandList" class="btn btn-warning">取消</a>
-                                    <input type="hidden" name="action" value="brandEdit">
-                                    <input type="hidden" name="brandId" value="\{$brandData.brandId\}">
-                                    \{if $brandData.imageId != ''\}
-                                    <input type="hidden" name="imageId" value="\{$brandData.imageId\}">
-                                    \{/if\}
+                                    <a href="../controller/lenController.php?action=lenList" class="btn btn-warning">取消</a>
+                                    <input type="hidden" name="action" value="lenEdit">
+                                    <input type="hidden" name="lenId" value="\{$lenData.lenId\}">
                                     <button type="submit" class="btn btn-success">更新</button>
                                 </div>
                             </form>
@@ -122,7 +103,6 @@
         </div>
         \{include file="../common/footer.html"\}
     </div>
-    <script src="../javascript/userEdit.js"></script>
 </body>
 
 </html>
