--- a/web/view/len/lenList.html
+++ b/web/view/len/lenList.html
@@ -9,11 +9,9 @@
     <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script>
     $(function () {
-        $('#brandListTable').DataTable({
+        $('#lenListTable').DataTable({
             "columnDefs": [
-                { "orderable": false, "targets": 1 },
-                { "orderable": false, "targets": 2 },
-                { "orderable": false, "targets": 4 }
+                { "orderable": false, "targets": 7 }
             ],
             "paging": false,
             "lengthChange": false,
@@ -23,34 +21,16 @@
             "autoWidth": false
         });
     });
-    function deleteBrandWithImg(brandId,imageId){
-        BootstrapDialog.show({
-            title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有品牌分類',
-            buttons: [{
-                label: '確定',
-                cssClass: 'btn-danger',
-                action: function(){
-                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId + '&imageId=' + imageId ;
-                }
-            },{
-                label: '取消',
-                action: function(dialogItself){
-                    dialogItself.close();
-                }
-            }]
-        });
-    }
 
-    function deleteBrand(brandId){
+    function deletelen(lenId){
         BootstrapDialog.show({
             title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有風格分類',
+            message: '確定刪除隱形眼鏡嗎?',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
                 action: function(){
-                    location='../controller/brandController.php?action=brandDelete&brandId='+ brandId;
+                    location='../controller/lenController.php?action=lenDelete&lenId='+ lenId;
                 }
             },{
                 label: '取消',
@@ -69,7 +49,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>品牌檢視修改</h1>
+                <h1>隱形眼鏡檢視修改</h1>
             </section>
             <!-- Main content -->
             <section class="content">
@@ -83,39 +63,53 @@
                         \{/if\}
                         <div class="box box-info">
                             <div class="box-header">
-                                <h3 class="box-title">品牌列表</h3>
+                                <h3 class="box-title">隱形眼鏡列表</h3>
                             </div>
                             <div class="box-body">
-                                <table class="table table-striped" id="brandListTable">
+                                <table class="table table-striped" id="lenListTable">
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
-                                            <th>品牌名稱</th>
-                                            <th>品牌描述</th>
-                                            <th>使用圖片</th>
+                                            <th>隱形眼鏡名稱</th>
+                                            <th>品牌</th>
+                                            <th>片數</th>
+                                            <th>大小</th>
+                                            <th>使用天數</th>
+                                            <th>顏色</th>
                                             <th>最後更新時間</th>
                                             <th>操作選項</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        \{foreach from=$allbrandData item=brand\}
+                                        \{foreach from=$allLenData item=len\}
                                         <tr>
-                                            <td>\{$brand.brandName\}</td>
-                                            <td>\{$brand.description\}</td>
-                                            <td><img src="\{$brand.path\}" alt="尚未上傳圖片" width="350px"></td>
-                                            <td>\{$brand.lastUpdateTime\}</td>
+                                            <td>\{$len.lenName\}</td>
+                                            <td>\{$len.brandName\}</td>
+                                            <td>\{$len.quantity\}</td>
+                                            <td>\{$len.size\}</td>
+                                            \{if $len.period == 1\}
+                                                <td>日拋</td>
+                                            \{else if $len.period == 1\}
+                                                <td>月拋</td>
+                                            \{else if $len.period == 2\}
+                                                <td>周拋</td>
+                                            \{else if $len.period == 3\}
+                                                <td>周拋</td>
+                                            \{else if $len.period == 4\}
+                                                <td>雙周拋</td>
+                                            \{else if $len.period == 5\}
+                                                <td>季拋</td>
+                                            \{else if $len.period == 6\}
+                                                <td>硬式</td>
+                                            \{/if\}
+                                            <td>\{$len.color\}</td>
+                                            <td>\{$len.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/brandController.php?action=brandEditPrepare&brandId=\{$brand.brandId\}&imageId=\{$brand.imageId\} ">
+                                                <a href="../controller/lenController.php?action=lenEditPrepare&lenId=\{$len.lenId\} ">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
-                                                </a>&nbsp;
-                                                \{if $brand.imageId != ''\}
-                                                <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrandWithImg('\{$brand.brandId\}' , '\{$brand.imageId\}');"><i class="glyphicon glyphicon-remove"></i></button>
-                                                </a>&nbsp;
-                                                \{else\}
-                                                <a href="#">
-                                                    <button class="btn btn-sm btn-danger" onclick="deleteBrand('\{$brand.brandId\}');"><i class="glyphicon glyphicon-remove"></i></button>
                                                 </a>
-                                                \{/if\}
+                                                <a href="#">
+                                                    <button class="btn btn-sm btn-danger" onclick="deletelen('\{$len.lenId\}');"><i class="glyphicon glyphicon-remove"></i></button>
+                                                </a>
                                             </td>
                                         </tr>
                                         \{/foreach\}
