--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -118,7 +118,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="../controller/articleController.php?action=educationAddPrepare">
+                                <a href="../controller/educationController.php?action=educationAddPrepare">
                                     <i class="fa fa-file-image-o"></i>衛教文章新增</a>
                             </li>
                             <li>
@@ -134,7 +134,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="../controller/articleController.php?action=newsAddPrepare">
+                                <a href="../controller/newsController.php?action=newsAddPrepare">
                                     <i class="fa fa-file-video-o"></i>趨勢新知文章新增</a>
                             </li>
                             <li>
@@ -150,7 +150,7 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="../controller/articleController.php?action=lifeAddPrepare">
+                                <a href="../controller/lifeController.php?action=lifeAddPrepare">
                                     <i class="fa fa-file-text-o"></i>興南生活文章新增</a>
                             </li>
                             <li>
@@ -169,7 +169,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li>
-                        <a href="#">
+                        <a href="../controller/courseController.php?action=courseAddPrepare">
                             <i class="fa fa-graduation-cap"></i>課程資訊新增</a>
                     </li>
                     <li>
@@ -186,7 +186,7 @@
                 </a>
                 <ul class="treeview-menu">
                     <li>
-                        <a href="#">
+                        <a href="../controller/storeController.php?action=storeAddPrepare">
                             <i class="fa fa-home"></i>店家資料專案</a>
                     </li>
                     <li>
