Add newsList, lifeList , storeList

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -138,7 +138,7 @@
                                     <i class="fa fa-file-video-o"></i>趨勢新知文章新增</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/newsController.php?action=newsList">
                                     <i class="fa fa-file-video-o"></i>趨勢新知文章檢視/修改</a>
                             </li>
                         </ul>
@@ -154,7 +154,7 @@
                                     <i class="fa fa-file-text-o"></i>興南生活文章新增</a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="../controller/lifeController.php?action=lifeList">
                                     <i class="fa fa-file-text-o"></i>興南生活文章檢視/修改</a>
                             </li>
                         </ul>
@@ -190,7 +190,7 @@
                             <i class="fa fa-home"></i>店家資料專案</a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="../controller/storeController.php?action=storeList">
                             <i class="fa fa-home"></i>店家資料檢視/修改管理</a>
                     </li>
                 </ul>
